- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.7.1, 5.9.1
- 
    Qt environment:
 * Qt 5.7.1 and 5.9.1, x86 and ARM
 
 Android Devices:
 * fails on NVIDIA Shield K1 (ARM) running either Android 6 or 7.
 * fails on Panasonic ToughPad FZ-B2D (x86) running Android 6.0.1
 * fails on ACER (x86) GT-810 running Android 5.1
 * fails on Juniper Systems Cedar (ARM) GT7G 7" running Android 6.0Qt environment: * Qt 5.7.1 and 5.9.1, x86 and ARM Android Devices: * fails on NVIDIA Shield K1 (ARM) running either Android 6 or 7. * fails on Panasonic ToughPad FZ-B2D (x86) running Android 6.0.1 * fails on ACER (x86) GT-810 running Android 5.1 * fails on Juniper Systems Cedar (ARM) GT7G 7" running Android 6.0
- 
        
- 
        bacf9cd04c21c62075087febe0a799ed8d1c5f8c (qt/qtbase/dev)
1) The Qt provided "screenshot" sample code demonstrates the failing grabWindow() behavior seen elsewhere on multiple Android platforms (have not yet found one that it works on). QScreen::grabWindow() always returns a null bitmap on Android. See function shootScreen() in the Qt sample code.
2) Attempts to use grabWindow() all fail on Android (Win32 works fine).
- fails on NVIDIA Shield K1 (arm) running either Android 6 or 7.
- fails on Panasonic FZ-B2D (x86) running Android 6.0.1
- fails on ACER (x86) GT-810 running Android 5.1
- fails on Juniper Systems Cedar (ARM) GT7G 7" running Android 6.0
3 Tried various permutations of winId()'s, screen geometry rect's, default parameters to try and find something combination that works. No joy (but it all works on Windows, not Android).
grabWindow(0)
grabWindow(QApplication:desktop()->winID());
grabWindow(QApplication.activeWindow()-winId(), rect.x(), rect.y()...). etc...
- relates to
- 
                    QTBUG-53083 [Android] QQuickWindow::grabWindow() will return a black image -         
- Closed
 
-         
- 
                    QTBUG-118849 Android: QScreen grabWindow() returns null pixmap -         
- Closed
 
-         
- resulted in
- 
                    QTBUG-90959 After first call to QWindow:winId() screen updates(?) do not work correctly -         
- Reported
 
-         
| For Gerrit Dashboard: QTBUG-63275 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 332997,10 | Android: Add grabWindow handling | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 337913,2 | Android: Add grabWindow handling | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |